Learnings/kubernetes/podmultiple2.yml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers-with-debian

spec:
  restartPolicy: Never
  containers:
    - name: nginx-container
      image: nginx
    - name: debian-container
      image: debian
      command: ["sleep","1000"]
