Learnings/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
   - http:
     paths:
       - path: /nginx
         backend:
         service:
           name: nginx-dashboard
           port:
             number: 8080
